--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docxtemplater": "^3.58.1",
     "file-saver": "^2.0.5",
+    "jszip-utils": "^0.1.0",
     "lucide-react": "^0.473.0",
     "pizzip": "^3.1.7",
     "react": "^18.3.1",
